--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -7,13 +7,15 @@
     cursor: pointer;
     margin-bottom: -3.7px;
 }
-
+.SingleColor .ColorBox{
+    height: 50%;
+}
 .ColorBox:hover .copy-button{
     opacity: 1;
     transition: 0.5s;
 }
 
-.copy-button{
+.copy-button, .back-button{
     width: 100px;
     height: 30px;
     position: absolute;
@@ -29,8 +31,12 @@
     color:white;
     text-transform: uppercase;
     border: none;
-    opacity: 0;
+    text-decoration: none;
 
+}
+
+.copy-button{
+    opacity: 0;
 }
 
 .box-content{
@@ -43,6 +49,13 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
+}
+
+.light-text{
+    color:#fff;
+}
+.ColorBox .dark-text{
+    color:rgba(0,0,0, .6);
 }
 
 .see-more{
@@ -111,4 +124,8 @@
 .copy-msg p {
     font-size: 2rem;
     font-weight: 100;
+}
+
+.ColorBox.Back{
+    background-color: black;
 }
