--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -45,4 +45,10 @@
     height: 13px;
     margin-left: -7px;
     margin-top: -3px;
+    
+}
+
+.select-container{
+    margin-left: auto;
+    margin-right: 1rem;
 }
