--- a/src/Pallete.css
+++ b/src/Pallete.css
@@ -1,6 +1,18 @@
 .Pallete{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 .Pallete-colors{
     height: 90%;
+}
+
+.Pallete-footer{
+    background-color: #fff;
+    height: 5vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-weight: bold;
+    margin:0 1rem;
 }
